libraries and other shit. map not functional yet

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/d3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/queue.min.js"></script>
   <script src="js/leaflet.js"></script>
+  <script src="js/topojson.js"></script>
 
   <!-- Visualization objects -->
   <script src="js/chloropleth.js"></script>
