Color shading works

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="js/queue.min.js"></script>
   <script src="js/leaflet.js"></script>
   <script src="js/topojson.js"></script>
+  <script src="js/colorbrewer.js"></script>
 
   <!-- Visualization objects -->
   <script src="js/chloropleth.js"></script>
