Drop down works

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-md-12">
         
-        <!-- Headline -->
+        <!-- headline -->
         <h1>Chloropleth
           <span class="divider">|</span>
           <span class="sub-headline">
@@ -28,7 +28,13 @@
           </span>
         </h1>
 
-        <!-- Visualization placeholders -->
+        <!-- drop down -->
+        <select class="form-control" id="chloropleth-dropdown">
+          <option value="inspections">Inspections</option>
+          <option value="violations">Violations</option>
+        </select>
+
+        <!-- chloropleth -->
         <div id="chloropleth">
         </div>
       
