Chloropleth basics are done

--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
           <option value="violations">Violations</option>
         </select>
 
-        <!-- chloropleth -->
-        <div id="chloropleth">
+        <div class="row">
+          <div class="col-md-9">
+            <!-- chloropleth -->
+            <div id="chloropleth">
+            </div>
+          </div>
+          <div class="col-md-3">
+            <!-- info box -->
+            <div id="chloropleth-tooltip-box">
+              <h2>Mouse over map for more info!</h2>
+            </div>
+          </div>
         </div>
+        
       
       </div>
     </div>
