Repositioned chloropleth map elements

--- a/index.html
+++ b/index.html
@@ -22,29 +22,28 @@
     <div class="row">
       <div class="col-md-12">
         <!-- chloropleth headline -->
-        <h1>Chloropleth
-          <!-- <span class="divider">|</span>
-          <span class="sub-headline">
-            <span id="city">
-            </span> San Francisco
-          </span> -->
-        </h1>
-        <!-- chloropleth drop down -->
-        <select class="form-control" id="chloropleth-dropdown">
-          <option value="inspections">Inspections</option>
-          <option value="violations">Violations</option>
-        </select>
+        
+        
         <div class="row">
           <div class="col-md-9">
-            <!-- chloropleth visualization -->
-            <div id="chloropleth">
-            </div>
-          </div>
-          <div class="col-md-3">
             <!-- chloropleth info box -->
             <div id="chloropleth-tooltip-box">
               <h2>Mouse over map for more info!</h2>
             </div>
+            <!-- chloropleth visualization -->
+            <div id="chloropleth">
+            </div>
+          </div>
+          <div class="col-md-3 chloropleth_right_col">
+            <!-- chloropleth header -->
+            <h1 class="chloropleth_right_col_item">Map Filter</h1>
+            <!-- chloropleth drop down -->
+            <select class="form-control chloropleth_right_col_item" id="chloropleth-dropdown">
+              <option value="inspections">Inspections</option>
+              <option value="violations">Violations</option>
+            </select>
+            </br>
+            <h1 class="chloropleth_right_col_item">Portrero Hill</h1>
           </div>
         </div>
       </div>
@@ -59,14 +58,14 @@
     <div class="row">
       <div class="col-md-12">
         <!-- Headline -->
-        <h1>Food Truck Routes in SF
+        <!-- <h1>Food Truck Routes in SF -->
           <!--<span class="divider">|</span>
           <span class="sub-headline">
             <span id="truck-count"></span> Trucks
           </span> -->
         </h1>
         <!-- animation visualization -->
-        <div id="truck-route-map"></div>
+        <!-- <div id="truck-route-map"></div> -->
         </br>
       </div>
     </div>
@@ -74,9 +73,9 @@
     <!-- ************************************* Heatmap ************************************* -->
     <div class="row">
       <!-- headline -->
-      <h1>Food Truck Heat Map</h1>
+      <!-- <h1>Food Truck Heat Map</h1> -->
       <!-- heat map visualization -->
-      <div id="heat-map"></div>
+      <!-- <div id="heat-map"></div> -->
     </div>
   </div>
 
