--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
               <option value="violations">Violations</option>
             </select>
             </br>
-            <h1 class="chloropleth_right_col_item">Portrero Hill</h1>
+            <!-- neighborhood being shown -->
+            <h1 id="neighborhood_being_show" class="chloropleth_right_col_item">Portrero Hill</h1>
           </div>
         </div>
       </div>
@@ -58,14 +59,14 @@
     <div class="row">
       <div class="col-md-12">
         <!-- Headline -->
-        <!-- <h1>Food Truck Routes in SF -->
+        <h1>Food Truck Routes in SF
           <!--<span class="divider">|</span>
           <span class="sub-headline">
             <span id="truck-count"></span> Trucks
           </span> -->
         </h1>
         <!-- animation visualization -->
-        <!-- <div id="truck-route-map"></div> -->
+        <div id="truck-route-map"></div>
         </br>
       </div>
     </div>
@@ -73,9 +74,9 @@
     <!-- ************************************* Heatmap ************************************* -->
     <div class="row">
       <!-- headline -->
-      <!-- <h1>Food Truck Heat Map</h1> -->
+      <h1>Food Truck Heat Map</h1>
       <!-- heat map visualization -->
-      <!-- <div id="heat-map"></div> -->
+      <div id="heat-map"></div>
     </div>
   </div>
 
