Added container for chloropleth

--- a/v2/index.html
+++ b/v2/index.html
@@ -99,9 +99,13 @@
 					<li class="menuItem"><a href="#credits">Credits</a></li>
 					<li class="menuItem"><a href="#contact">Contact</a></li> -->
 					<li class="menuItem"><a href="#whatis">What is it?</a></li> 
-					<li class="menuItem"><a href="#useit">Chloropleth</a></li>
-					<li class="menuItem"><a href="#screen">Animation</a></li>
-					<li class="menuItem"><a href="#credits">HeatMap</a></li>
+					<li class="menuItem"><a href="#chloropleth">Chloropleth</a></li>
+					<!-- <li class="menuItem"><a href="#animation">Animation</a></li>
+					<li class="menuItem"><a href="#heatmap">HeatMap</a></li> -->
+					<li class="menuItem"><a href="#useit">Use It</a></li>
+					<li class="menuItem"><a href="#screen">Screenshot</a></li>
+					<li class="menuItem"><a href="#credits">Credits</a></li>
+					<li class="menuItem"><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
 		   
@@ -189,9 +193,18 @@
 				   <h3>Heatmap</h3>
 					<p class="lead">What neighborhood should you go to explore new food options? Browse a map to see which neighborhoods have the most fresh grub.</p>
 				</div>
-				
+
 			</div>
 		</div>
+	</div>
+
+	<!-- *********************************************** CHLOROPLETH ***********************************************-->
+	<div id="chloropleth" class="content-section-a">
+		
+		<div class="container">
+
+		</div>
+
 	</div>
 	
 	<!-- Use it -->
@@ -220,7 +233,6 @@
 				</div>   
             </div>
         </div>
-        <!-- /.container -->
     </div>
 
     <div class="content-section-b"> 
