Added script that creates sorted list of google neighborhoods and geo_json neighborhoods

--- a/v2/index.html
+++ b/v2/index.html
@@ -211,7 +211,7 @@
 				<!-- chloropleth information box -->
 				<div class="col-sm-4 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">Chloropleth</h3>
-                    <p class="lead">Use the drop down menu below to toggle between the inspection and violation data 
+                    <p class="lead">Use the drop down menu below to toggle between inspection and violation data. 
 					</p>
 
 				    <div class="form-group">
