--- a/v2/index.html
+++ b/v2/index.html
@@ -102,7 +102,7 @@
 					<li class="menuItem"><a href="#screen">Screenshot</a></li>
 					<li class="menuItem"><a href="#credits">Credits</a></li>
 					<li class="menuItem"><a href="#contact">Contact</a></li> -->
-					<li class="menuItem"><a href="#whatis">What is it?</a></li> 
+					<li class="menuItem"><a href="#whatis">What Is This?</a></li> 
 					<li class="menuItem"><a href="#chloropleth-section">Chloropleth</a></li>
 					<!-- <li class="menuItem"><a href="#animation">Animation</a></li>
 					<li class="menuItem"><a href="#heatmap">HeatMap</a></li> -->
@@ -121,7 +121,7 @@
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>What is it?</h2>
+				<h2>What is this?</h2>
 				<p class="lead" style="margin-top:0">An exploration of food in San Francisco.</p>
 				
 			</div>
@@ -195,7 +195,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/speech-balloon.svg" alt="Generic placeholder image" style="width: 100px">
 				   <h3>Heatmap</h3>
-					<p class="lead">What neighborhood should you go to explore new food options? Browse a map to see which neighborhoods have the most fresh grub.</p>
+					<p class="lead">What neighborhood should you go to explore new food options? Browse a map to see which neighborhoods boast the most fresh grub.</p>
 				</div>
 
 			</div>
