Commented out script that breaks shit

--- a/v2/index.html
+++ b/v2/index.html
@@ -233,7 +233,7 @@
 
 				    <!-- tooltip table headers -->
 				    <div id="chloropleth-tooltip-header">
-				    	
+
 				    </div>
 
 					<!-- tooltip box -->
@@ -651,7 +651,11 @@
 	<script src="js/classie.js"></script>
 	<script src="js/uiMorphingButton_inflow.js"></script>
 	<!-- Magnific Popup core JS file -->
-	<script src="js/jquery.magnific-popup.js"></script> 
+	<script src="js/jquery.magnific-popup.js"></script>
+	<!-- TODO: make this local -->
+	<!-- TODO: this breaks shit, fix it --> 
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">-->
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>-->
 </body>
 
 </html>
