functional legend and slider"
"

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           </span> -->
         </h1>
         <!-- animation visualization -->
+        <div id="truck-timeline"></div>
         <div id="truck-route-map"></div>
         </br>
       </div>
@@ -88,6 +89,7 @@
   <script src="js/leaflet.js"></script>
   <script src="js/topojson.js"></script>
   <script src="js/colorbrewer.js"></script>
+  <script src="js/d3.slider.js"></script>
   <script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 
   <!-- Visualization objects -->
