fixed legend, slider, and clock

--- a/v2/index.html
+++ b/v2/index.html
@@ -18,7 +18,8 @@
  
     <!-- Custom Google Web Font -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:100,400,300,400italic,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 	
     <!-- Custom CSS-->
@@ -254,6 +255,7 @@
 		</div>
 
 	</div>
+	<!-- *********************************************** ANIMATION MAP ***********************************************-->
 
 	<div id="animation-section" class="content-section-b">
 
@@ -261,19 +263,23 @@
 
 			<div class="row">
 
-				<div id="wrapper">
-				    <div id="map"></div>
-			      	<button id="play">Play</button>
-			      	<span id="clock">Hour</span>
-				</div>
 			    <div class="row">
 			      	<div class="col-md-12">
 			        	<!-- Headline -->
-			        	<h1>Food Truck Routes in SF
-			        	</h1>
+			        	<h3>Food Trucks in SF
+			        	</h3>
+						<p class="lead">Click on the start button to begin the animation and see where and when food trucks are operating.</p>
+
 				        <!-- animation timeline -->
-				        <div id="truck-timeline">
-			        	</div>
+
+						<div id="wrapper" class="col-md-4">
+							<span id="clock">Begin!</span>
+							<br>
+							<button type="button" id="play" class="btn btn-secondary">Start</button>
+							<!--<button id="play">Play</button>-->
+						</div>
+
+				        <div id="truck-timeline" class="col-md-8"></div>
 
 				        <!-- animation visualization -->
 				        <div id="truck-route-map">
