Cleaned up page colors, added a link to heatmap, added source code link

--- a/v2/index.html
+++ b/v2/index.html
@@ -98,20 +98,10 @@
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
-					
-					<!--<li class="menuItem"><a href="#whatis">What is?</a></li> 
-					<li class="menuItem"><a href="#useit">Use It</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
-					<li class="menuItem"><a href="#contact">Contact</a></li> -->
 					<li class="menuItem"><a href="#whatis">What Is This?</a></li> 
 					<li class="menuItem"><a href="#chloropleth-section">Chloropleth</a></li>
 					<li class="menuItem"><a href="#animation-section">Animation</a></li>
-					<!-- <li class="menuItem"><a href="#heatmap">HeatMap</a></li> -->
-					<!-- <li class="menuItem"><a href="#useit">Use It</a></li> -->
-					<!-- <li class="menuItem"><a href="#screen">Screenshot</a></li> -->
-					<!-- <li class="menuItem"><a href="#credits">Credits</a></li> -->
-					<!-- <li class="menuItem"><a href="#contact">Contact</a></li> -->
+					<li class="menuItem"><a href="#heatmap-section">HeatMap</a></li>
 				</ul>
 			</div>
 		   
@@ -295,7 +285,7 @@
 	</div>
 
 	<!-- *********************************************** Heat Map ***********************************************-->
-	<div id="heatmap-section" class="content-section-b">
+	<div id="heatmap-section" class="content-section-a">
 
 		<div class="container">
 
@@ -350,7 +340,7 @@
 
 	<!--**************************************************************************************-->
 	<!-- Use it -->
-    <div id="useit" class="content-section-a">
+<!--     <div id="useit" class="content-section-a">
 
         <div class="container">
 			
@@ -375,9 +365,9 @@
 				</div>   
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="content-section-b"> 
+<!--     <div class="content-section-b"> 
 		
 		<div class="container">
             <div class="row">
@@ -416,9 +406,9 @@
 				</div>  			
 			</div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="content-section-a">
+<!--     <div class="content-section-a">
 
         <div class="container">
 
@@ -443,10 +433,10 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
 	<!-- Screenshot -->
-	<div id="screen" class="content-section-b">
+<!-- 	<div id="screen" class="content-section-b">
         <div class="container">
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
@@ -497,9 +487,9 @@
         </div>
 
 
-	</div>
+	</div> -->
 	
-	<div  class="content-section-c ">
+<!-- 	<div  class="content-section-c ">
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
@@ -526,10 +516,10 @@
 			</div>	
 			</div>>
 		</div>
-	</div>	
+	</div> -->	
 	
 	<!-- Credits -->
-	<div id="credits" class="content-section-a">
+	<div id="credits" class="content-section-b">
 		<div class="container">
 			<div class="row">
 			
@@ -594,9 +584,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
-				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p> 
+				<h2>Download Source Code</h2>
+				<p><a class="btn btn-embossed btn-primary view" href="https://github.com/nmahlangu/cs171-final-project"role="button">GitHub</a></p> 
 			 </div>
 			</div>
 		</div>
