--- a/v2/index.html
+++ b/v2/index.html
@@ -234,7 +234,7 @@
 
 	</div>
 
-	<!-- *********************************************** Heat Map ***********************************************-->
+	<!-- *********************************************** HEAT MAP ***********************************************-->
 	<div id="heatmap-section" class="content-section-a">
 
 		<div class="container">
