small hmtl change for row counts

--- a/v2/index.html
+++ b/v2/index.html
@@ -119,7 +119,7 @@
 			</div>
 			
 
-			<div class="row threerow">
+			<div class="row">
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/signs.svg" alt="Generic placeholder image" style="width: 100px">
