Removed extra rotation class from face icons and commented out all console.log() calls

--- a/v2/index.html
+++ b/v2/index.html
@@ -291,7 +291,7 @@
 				<!-- nick -->
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
-						<div class="col-md-4 rotate">
+						<div class="col-md-4">
 							<img class="rotate" src="img/faces/nick2.png" alt="Generic placeholder image" style="width: 170px">
 						</div>
 						<div class="col-md-8 box-ct">
@@ -308,7 +308,7 @@
 							<h3>Yuan Jiang</h3>
 							<p>Harvard College '16 | Statistics</p>
 						</div>
-						<div class="col-md-4 rotate">
+						<div class="col-md-4">
 							<img class="rotate" src="img/faces/yuan.png" alt="Generic placeholder image" style="width: 170px">
 						</div>
 					</div>
