Added more images and added a url bar image

--- a/v2/index.html
+++ b/v2/index.html
@@ -13,6 +13,9 @@
 
     <title>I Love Food</title>
 
+    <!-- url image -->
+    <link rel="icon" type="image/png" href="img/intro/food-drawing3.png"/>
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
  
@@ -101,7 +104,7 @@
 					<li class="menuItem"><a href="#whatis">What Is This?</a></li> 
 					<li class="menuItem"><a href="#chloropleth-section">Chloropleth</a></li>
 					<li class="menuItem"><a href="#animation-section">Animation</a></li>
-					<li class="menuItem"><a href="#heatmap-section">HeatMap</a></li>
+					<li class="menuItem"><a href="#heatmap-section">Heat Map</a></li>
 				</ul>
 			</div>
 		   
