--- a/index.html
+++ b/index.html
@@ -115,13 +115,36 @@
 	<div id="whatis" class="content-section-b" style="border-top: 0">
 		<div class="container">
 
-			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
+			<div class="row text-center">
 				<h2>What is this?</h2>
 				<p class="lead" style="margin-top:0">An exploration of food in San Francisco.</p>
 				
 			</div>
-			
 
+			<br>
+
+			<div class="row">
+				<h3>Introduction</h3>
+				<br>
+				<p class="intro">As one of the culinary capitals in the world, San Francisco boasts one of the most diverse food cultures
+					in America with over 10,000 dining establishments scattered across the city. From food trucks to the
+					distinct ethnic food neighborhoods such as Little Italy and Chinatown, San Francisco offers endless
+					options for those with open minds and hungry stomachs. But where exactly are the best places to eat?
+					What neighborhoods should we avoid? Where can we find all those elusive food trucks? This project seeks
+					to answer these questions and to provide a comprehensive evaluation of food in the city.
+				</p>
+				<br>
+				<h3>About the Data</h3>
+				<br>
+				<p class="intro">SF OpenData was established in 2009 and is the city's official open data portal. The site itself hosts
+					hundreds of datasets on transportation to education to city infrastructure. The two datasets that we
+					decided to use for our project were Mobile Food Schedule and Restaurant Scores. The first dataset
+					provides a weekly timetable of where and when food trucks stopped throughout the week, while the second
+					dataset provides health inspection data as recorded by city health officials.
+				</p>
+			</div>
+			<br>
+			<br>
 			<div class="row">
 
 				<div class="col-sm-4 wow fadeInDown text-center">
@@ -144,6 +167,8 @@
 				</div>
 
 			</div>
+
+
 		</div>
 	</div>
 
@@ -211,7 +236,8 @@
 			        	<!-- Headline -->
 			        	<h3>Food Trucks in SF
 			        	</h3>
-						<p class="lead">Click on the start button to begin the animation and see where and when food trucks are operating.</p>
+						<p class="lead">Click on the start button to begin the animation and see where and when food trucks
+							are operating. Hover over a circle to discover more information about the truck. </p>
 
 				        <!-- animation timeline -->
 
