Fixed styling of intro

--- a/index.html
+++ b/index.html
@@ -118,33 +118,32 @@
 			<div class="row text-center">
 				<h2>What is this?</h2>
 				<p class="lead" style="margin-top:0">An exploration of food in San Francisco.</p>
-				
 			</div>
 
-			<br>
-
-			<div class="row">
+			<div class="row text-center intro">
 				<h3>Introduction</h3>
 				<br>
-				<p class="intro">As one of the culinary capitals in the world, San Francisco boasts one of the most diverse food cultures
+				<p>As one of the culinary capitals in the world, San Francisco boasts one of the most diverse food cultures
 					in America with over 10,000 dining establishments scattered across the city. From food trucks to the
 					distinct ethnic food neighborhoods such as Little Italy and Chinatown, San Francisco offers endless
 					options for those with open minds and hungry stomachs. But where exactly are the best places to eat?
 					What neighborhoods should we avoid? Where can we find all those elusive food trucks? This project seeks
 					to answer these questions and to provide a comprehensive evaluation of food in the city.
 				</p>
-				<br>
+
 				<h3>About the Data</h3>
 				<br>
-				<p class="intro">SF OpenData was established in 2009 and is the city's official open data portal. The site itself hosts
+				<p>SF OpenData was established in 2009 and is the city's official open data portal. The site itself hosts
 					hundreds of datasets on transportation to education to city infrastructure. The two datasets that we
 					decided to use for our project were Mobile Food Schedule and Restaurant Scores. The first dataset
 					provides a weekly timetable of where and when food trucks stopped throughout the week, while the second
 					dataset provides health inspection data as recorded by city health officials.
 				</p>
 			</div>
+
 			<br>
 			<br>
+
 			<div class="row">
 
 				<div class="col-sm-4 wow fadeInDown text-center">
