--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					distinct ethnic food neighborhoods such as Little Italy and Chinatown, San Francisco offers endless
 					options for those with open minds and hungry stomachs. But where exactly are the best places to eat?
 					What neighborhoods should we avoid? Where can we find all those elusive food trucks? This project seeks
-					to answer these questions and to provide a comprehensive evaluation of food in the city.
+					to answer these questions and provide a comprehensive evaluation of food in the city.
 				</p>
 
 				<h3>About the Data</h3>
@@ -136,7 +136,7 @@
 				<p>SF OpenData was established in 2009 and is the city's official open data portal. The site itself hosts
 					hundreds of datasets on transportation to education to city infrastructure. The two datasets that we
 					decided to use for our project were Mobile Food Schedule and Restaurant Scores. The first dataset
-					provides a weekly timetable of where and when food trucks stopped throughout the week, while the second
+					provides a weekly timetable of where and when food trucks stop throughout the week, while the second
 					dataset provides health inspection data as recorded by city health officials.
 				</p>
 			</div>
@@ -300,12 +300,12 @@
 					<div class="lead">
 						<p>
 							Where are the most restaurants and food trucks located in the city? Can you identify which
-							neighborhoods the densest regions in red are?
+							neighborhoods the red regions are?
 						</p>
 
 					<br>
 						<p>
-							Note that for food trucks, the vat majority are concentrated in the Financial District and SOMA where many
+							For food trucks, the vast majority are concentrated in the Financial District and SOMA where many
 							office buildings are located. When you observe the restaurant data, however, we see many distinct
 							regions located throughout the city. You can easily identify some of the most popular dining districts in SF,
 							such as the Mission, Chinatown, and Fisherman's Wharf.
