Added 'no data' message for neighborhoods with missing data

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 				<div class="col-sm-4 wow fadeInLeftBig"  data-animation-delay="200"> 
 					<!-- headers -->  
-                    <h3 class="section-heading">Chloropleth</h3>
+                    <h3 id="chloropleth_h3_heading" class="section-heading">Chloropleth</h3>
                     <p class="lead">Use the drop down menu below to toggle between inspection and violation data. 
 					</p>
 
