Added video on website

--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
 
 			</div>
 
+			<div class="row" style="text-align: center; font-size: 50px;">
+				<p>See it in action on <a style="color: #D84A4A" href="www.TODO.com">YouTube</a></p>
+			</div>
+
 
 		</div>
 	</div>
@@ -366,7 +370,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Source Code</h2>
+				<h2>Source Code</h2>
+				</br>
 				<p><a class="btn btn-embossed btn-primary view" href="https://github.com/nmahlangu/cs171-final-project"role="button">GitHub</a></p> 
 			 </div>
 			</div>
